:sparkles: add update company handler logic
