# docs/swagger.yaml
@@ -55,6 +55,32 @@ definitions:
       message:
         type: string
     type: object
+  handler.UpdateCompanyRequest:
+    properties:
+      address:
+        type: string
+      addressCity:
+        type: string
+      addressComplement:
+        type: string
+      addressNumber:
+        type: string
+      addressState:
+        type: string
+      addressZipCode:
+        type: string
+      cnpj:
+        type: string
+      name:
+        type: string
+    type: object
+  handler.UpdateCompanyResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.CompanyResponse'
+      message:
+        type: string
+    type: object
   schemas.CompanyResponse:
     properties:
       address:
@@ -209,6 +235,42 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: Create Company
+      tags:
+      - Company
+    put:
+      consumes:
+      - application/json
+      description: Update a new company
+      parameters:
+      - description: Company identification
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UpdateCompanyRequest'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handler.UpdateCompanyResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Update Company
       tags:
       - Company
 swagger: "2.0"
